Add domain name and cert paths to config

--- a/config.json
+++ b/config.json
@@ -1,5 +1,8 @@
 {
+    "repeaterFQDN": "domain.com",
     "repeaterIpAddress": "127.0.0.1",
-    "repeaterPort": "8080",
-    "hasConfigServer": "false"
+    "repeaterPort": "8443",
+    "hasConfigServer": "false",
+    "httpsKeyPath": "/etc/letsencrypt/live/domain.com/privkey.pem",
+    "httpsCertPath": "/etc/letsencrypt/live/domain.com/cert.pem"
 }
